traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if ((estFaceMur == true) && (getDirection() == Direction.EAST)) {
    ^Snake:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if ((estFaceMur == true) && (getDirection() == Direction.WEST)) {
    ^Snake:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return false
    ^